--- a/index.html
+++ b/index.html
@@ -6,27 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,400;0,700;1,200;1,800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/button.css">
-    <link rel="stylesheet" href="css/records.css">
-    <link rel="stylesheet" href="css/modal.css">
+    <link rel="stylesheet" href="CSS/main.css">
+    <link rel="stylesheet" href="CSS/button.css">
+    <link rel="stylesheet" href="CSS/records.css">
+    <link rel="stylesheet" href="CSS/modal.css">
     <script src="main.js" defer></script>
     <title>CRUD</title>
 </head>
 <body>
     <header>
-        <h1 class="header-title">Cadastro de Clientes</h1>
+        <h1 class="header-title">Client registration</h1>
     </header>
     <main>
-        <button type="button" class="button blue mobile" id="cadastrarCliente">Cadastrar Cliente</button>
+        <button type="button" class="button blue mobile" id="cadastrarCliente">Client registration</button>
         <table id="tableClient" class="records">
             <thead>
                 <tr>
-                    <th>Nome</th>
+                    <th>Name</th>
                     <th>E-mail</th>
-                    <th>Celular</th>
-                    <th>Cidade</th>
-                    <th>Ação</th>
+                    <th>Cellphone</th>
+                    <th>City</th>
+                    <th>Action</th>
                 </tr>
             </thead>
             <tbody>
@@ -53,7 +53,7 @@
         </div>
     </main>
     <footer>
-        Copyright &copy; Prof. Fernando Leonid
+        Copyright &copy;
     </footer>
 </body>
 </html>
